--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,6 +11,18 @@
 
   <link rel="icon" href="../imgs/refcon.svg" type="image/svg">
   <link href="css/login.css" rel="stylesheet">
+
+  <style>
+    img {
+      -webkit-user-drag: none;
+      user-select: none;
+      -moz-user-select: none;
+      -webkit-user-drag: none;
+      -webkit-user-select: none;
+      -ms-user-select: none;
+    }
+  </style>
+
 </head>
 
 <body class="text-center">
