--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,6 +17,15 @@
     .box {
       display: none;
     }
+
+    img {
+      -webkit-user-drag: none;
+      user-select: none;
+      -moz-user-select: none;
+      -webkit-user-drag: none;
+      -webkit-user-select: none;
+      -ms-user-select: none;
+    }
   </style>
 
   <script>
