--- a/views/overviewt.ejs
+++ b/views/overviewt.ejs
@@ -3,7 +3,7 @@
 
 <div class="cards-list">
 
-    <div class="card 2">
+    <div onclick="location.href='/seatingorder'" class="card 2">
         <div class="card_image"> <img
                 src="https://media.gettyimages.com/photos/desks-in-empty-classroom-picture-id95011807?s=2048x2048" />
         </div>
