--- a/views/seatingorder.ejs
+++ b/views/seatingorder.ejs
@@ -4,10 +4,93 @@
     REFCON - Seating Order
 </title>
 
+<style>
+
+    .CSE{
+        background-color: #eb5d5c;
+    }
+    .IT{
+        background-color: #68e0e0;
+    }
+    .CIVIL{
+        background-color: #68e0e0;
+    }
+    .EEE{
+        background-color: #fae66d;
+    }
+    .ECE{
+        background-color: #8793fe;
+    }
+    .MECH{
+        background-color: #bc85fa;
+    }
+
+</style>
+
 <div class="container">
 
-    <div class="text-right">
-        <a href="/seatingorderspace" style="margin-top: 10px;margin-bottom: 10px; font-size: large; color: white;" class="btn btn-primary">Create Seating Space</a>
-    </div>
+    <div style="margin-top: 10px;"></div>
+
+    <% if(type === 'teacher'){ %>
+        <div class="text-right">
+            <a href="/seatingorderspace" style="margin-bottom: 10px; font-size: large; color: white;" class="btn btn-primary">Create Seating Space</a>
+        </div>
+    <% } %>
+
+
+    <% if(type === 'teacher'){%>
+
+        <% if(data.length != 0){ %>
+
+            <% for(var k = data.length-1; k >= 0; k--){ %>
+
+                <% var rollNumbers = []; var seatTypes = []; var seatNumbers = []; var count=0; for(i=0; i<data[k].rows; i++){ rollNumbers[i] =[];seatTypes[i] = [];seatNumbers[i] = []; for(j=0; j<data[k].columns; j++){ rollNumbers[i][j] =data[k].rollNumbers[count];seatTypes[i][j] =data[k].seatTypes[count];seatNumbers[i][j]=data[k].seatNumbers[count]; count++; } }  %>
+
+                <div class="alert alert-info">
+    
+                    <div>
+                        <font style="font-weight: bolder;"><%= data[k].block %></font> Block, <font style="font-weight: bolder;"><span style="border-radius: 15%;" class="<%= data[k].department1 %>"><%= data[k].department1 %></span> <%= data[k].year1 %></font> year & <font style="font-weight: bolder;"><span style="border-radius: 15%;" class="<%= data[k].department2 %>"><%= data[k].department2 %></span> <%= data[k].year2 %></font> year, Seating Allocation
+                    </div>
+                    <table class="table table-bordered">
+
+                        <% for(i=0; i<data[k].rows; i++){ %>
+
+                            <tr>
+
+                                <% for(j=0; j<data[k].columns; j++) { %>
+
+                                    <% if(rollNumbers[i][j] === 'XXXXXXXXXXXX' ){ %>
+                                        <td style="background-color: grey;">NIL</td>
+                                    <% }else{ %>
+                                        <td class="<%= seatTypes[i][j] %>"><%= rollNumbers[i][j].substring(9) %></td>
+                                    <% } %>
+
+                                <% } %>
+
+                            </tr>
+
+                        <% } %>
+
+                    </table>
+    
+                </div>
+    
+            <% } %>
+
+        <% }else{ %>
+
+            <div class="alert alert-info" style="margin-top: 5px;">
+                <h5>No Seating Space created </h5>
+            </div>
+
+        <% } %>
+
+    <% } else if(type === 'student'){ %>
+
+
+
+    <% } %>
+
+
 
 </div>
