--- a/views/seatingorderspace.ejs
+++ b/views/seatingorderspace.ejs
@@ -102,58 +102,66 @@
                 </div>
             </div>
 
+            <label> Session: </label> &nbsp;
+            <input checked type="radio" name="sessionIn" value="FN">
+            <label>FN</label>
+            <input type="radio" name="sessionIn" value="AN">
+            <label>AN</label>
+
+            <div></div>
+
             <div id="dept" style="margin-top: 9px;"></div>
             <label> Department 1: </label> &nbsp;
-            <input checked type="radio" onchange="showNoOfStudentsAndInfo()()" name="department1" value="CSE">
+            <input checked type="radio" onchange="showNoOfStudentsAndInfo()" name="department1" value="CSE">
             <label>CSE</label>
-            <input type="radio" onchange="showNoOfStudentsAndInfo()()" name="department1" value="IT">
+            <input type="radio" onchange="showNoOfStudentsAndInfo()" name="department1" value="IT">
             <label>IT</label>
-            <input type="radio" onchange="showNoOfStudentsAndInfo()()" name="department1" value="CIVIL">
+            <input type="radio" onchange="showNoOfStudentsAndInfo()" name="department1" value="CIVIL">
             <label>CIVIL</label>
-            <input type="radio" onchange="showNoOfStudentsAndInfo()()" name="department1" value="EEE">
+            <input type="radio" onchange="showNoOfStudentsAndInfo()" name="department1" value="EEE">
             <label>EEE</label>
-            <input type="radio" onchange="showNoOfStudentsAndInfo()()" name="department1" value="ECE">
+            <input type="radio" onchange="showNoOfStudentsAndInfo()" name="department1" value="ECE">
             <label>ECE</label>
-            <input type="radio" onchange="showNoOfStudentsAndInfo()()" name="department1" value="MECH">
+            <input type="radio" onchange="showNoOfStudentsAndInfo()" name="department1" value="MECH">
             <label>MECH</label>
 
             <div></div>
 
             <label> Year 1: </label> &nbsp;
-            <input type="radio" onchange="showNoOfStudentsAndInfo()()" name="year1" value="1">
+            <input type="radio" onchange="showNoOfStudentsAndInfo()" name="year1" value="1">
             <label> <font style="font-family: 'Times New Roman', Times, serif;">I</font> </label> &nbsp;
-            <input type="radio" onchange="showNoOfStudentsAndInfo()()" name="year1" value="2">
+            <input type="radio" onchange="showNoOfStudentsAndInfo()" name="year1" value="2">
             <label> <font style="font-family: 'Times New Roman', Times, serif;">II</font> </label>&nbsp;
-            <input checked type="radio" onchange="showNoOfStudentsAndInfo()()" name="year1" value="3">
+            <input checked type="radio" onchange="showNoOfStudentsAndInfo()" name="year1" value="3">
             <label> <font style="font-family: 'Times New Roman', Times, serif;">III</font> </label>&nbsp;
-            <input type="radio" onchange="showNoOfStudentsAndInfo()()" name="year1" value="4">
+            <input type="radio" onchange="showNoOfStudentsAndInfo()" name="year1" value="4">
             <label> <font style="font-family: 'Times New Roman', Times, serif;">IV</font> </label>&nbsp;
 
             <div style="margin-top: 9px;"></div>
             <label> Department 2: </label> &nbsp;
-            <input type="radio" onchange="showNoOfStudentsAndInfo()()" onchange="showNoOfStudentsAndInfo()()" name="department2" value="CSE">
+            <input type="radio" onchange="showNoOfStudentsAndInfo()" name="department2" value="CSE">
             <label>CSE</label>
-            <input type="radio" onchange="showNoOfStudentsAndInfo()()" name="department2" value="IT">
+            <input type="radio" onchange="showNoOfStudentsAndInfo()" name="department2" value="IT">
             <label>IT</label>
-            <input type="radio" onchange="showNoOfStudentsAndInfo()()" name="department2" value="CIVIL">
+            <input type="radio" onchange="showNoOfStudentsAndInfo()" name="department2" value="CIVIL">
             <label>CIVIL</label>
-            <input type="radio" onchange="showNoOfStudentsAndInfo()()" name="department2" value="EEE">
+            <input type="radio" onchange="showNoOfStudentsAndInfo()" name="department2" value="EEE">
             <label>EEE</label>
-            <input checked type="radio" onchange="showNoOfStudentsAndInfo()()" name="department2" value="ECE">
+            <input checked type="radio" onchange="showNoOfStudentsAndInfo()" name="department2" value="ECE">
             <label>ECE</label>
-            <input type="radio" onchange="showNoOfStudentsAndInfo()()" name="department2" value="MECH">
+            <input type="radio" onchange="showNoOfStudentsAndInfo()" name="department2" value="MECH">
             <label>MECH</label>
 
             <div></div>
 
             <label> Year 2: </label> &nbsp;
-            <input type="radio" onchange="showNoOfStudentsAndInfo()()" name="year2" value="1">
+            <input type="radio" onchange="showNoOfStudentsAndInfo()" name="year2" value="1">
             <label> <font style="font-family: 'Times New Roman', Times, serif;">I</font> </label> &nbsp;
-            <input type="radio" onchange="showNoOfStudentsAndInfo()()" name="year2" value="2">
+            <input type="radio" onchange="showNoOfStudentsAndInfo()" name="year2" value="2">
             <label> <font style="font-family: 'Times New Roman', Times, serif;">II</font> </label>&nbsp;
-            <input checked type="radio" onchange="showNoOfStudentsAndInfo()()" name="year2" value="3">
+            <input checked type="radio" onchange="showNoOfStudentsAndInfo()" name="year2" value="3">
             <label> <font style="font-family: 'Times New Roman', Times, serif;">III</font> </label>&nbsp;
-            <input type="radio" onchange="showNoOfStudentsAndInfo()()" name="year2" value="4">
+            <input type="radio" onchange="showNoOfStudentsAndInfo()" name="year2" value="4">
             <label> <font style="font-family: 'Times New Roman', Times, serif;">IV</font> </label>&nbsp;
             
             <div></div>
