--- a/views/reportspace.ejs
+++ b/views/reportspace.ejs
@@ -29,6 +29,8 @@
         <label> Report Bug </label> &nbsp;
         <input type="radio" name="reportType" value="change">
         <label> Request Change </label>&nbsp;
+        <input type="radio" name="reportType" value="general">
+        <label> General </label>&nbsp;
       </div>
   
       <input class="form-control" required type="text" name="reportTitle" placeholder="Report Title">
@@ -83,6 +85,37 @@
           </ul>
         </li>
         <br>
+              <strong><u>To find Specifics & Sub Specifics :</u></strong>
+      <ul style="margin-left: -23px; margin-top: 6px;">
+        <li>
+          Modules containing <font style="font-weight: bold;">Specifics</font> are highlighted <font style="font-weight: bold; color: #e92843;">red</font>(font) in color.
+        </li>
+        <li>
+          <font style="font-weight: bold;">Specifics</font> can also be found by hovering over a specific space card.
+        </li>
+        <li>
+          <font style="font-weight: bold;">Sub Specifics</font> can be found in the inner fields of a table.
+        </li>
+        <li>
+          Examples for <font style="font-weight: bold;">Specifics: </font>
+          <ul>
+            <li>
+              <font style="font-weight: bold;">Department, Year, Semester, Internal, Subject, Block, Session</font>
+            </li>
+
+          </ul>
+        </li>
+        <li>
+          Examples for <font style="font-weight: bold;">Sub Specifics: </font>
+          <ul>
+            <li>
+              <font style="font-weight: bold;">Roll Number, Mark, Arrear, Payment Status</font>
+            </li>
+
+          </ul>
+        </li>
+      </ul>
+      <br>
         <li>
           Example: <strong>To update a student's internal mark from X to Y.</strong>
           <br>Following are the specific attributes and their values:
@@ -112,36 +145,7 @@
           Do not mention any personal information in the description.
         </li>
       </ul>
-      <strong><u>To find Specifics & Sub Specifics :</u></strong>
-      <ul style="margin-left: -23px; margin-top: 6px;">
-        <li>
-          Modules containing <font style="font-weight: bold;">Specifics</font> are highlighted <font style="font-weight: bold; color: #e92843;">red</font> in color.
-        </li>
-        <li>
-          <font style="font-weight: bold;">Specifics</font> can also be found by hovering over a specific space card.
-        </li>
-        <li>
-          <font style="font-weight: bold;">Sub Specifics</font> can be found in the inner fields of a table.
-        </li>
-        <li>
-          Examples for <font style="font-weight: bold;">Specifics: </font>
-          <ul>
-            <li>
-              <font style="font-weight: bold;">Department, Year, Semester, Internal, Subject</font>
-            </li>
 
-          </ul>
-        </li>
-        <li>
-          Examples for <font style="font-weight: bold;">Sub Specifics: </font>
-          <ul>
-            <li>
-              <font style="font-weight: bold;">Roll Number, Mark, Arrear, Payment Status</font>
-            </li>
-
-          </ul>
-        </li>
-      </ul>
     </p>
 
   </div>
