"module completion(6/6) PROJECT COMPLETED"

--- a/views/confirm.ejs
+++ b/views/confirm.ejs
@@ -1,7 +1,7 @@
 <%- include("navbaronly"); -%>
 
 <title>
-    REFCON - Seating Space Delete all confirmation
+    REFCON - confirmation message
 </title>
 
 <body>
