--- a/views/seatingorder.ejs
+++ b/views/seatingorder.ejs
@@ -71,7 +71,7 @@
                 <div class="alert alert-info" style="float: left; margin-right: 30px;" title="Block: <%= data[k].block %>&#010;Session: <%= data[k].session %>">
     
                     <div>
-                        Block: <font style="font-weight: bolder; color: #e92843;"><%= data[k].block %></font>
+                        Block: <font style="font-size: larger; font-weight: bolder; color: #e92843;"><%= data[k].block %></font>
                     <% if(data.length != 1){ %>
                             <a class="btn btn-outline-danger" style="margin-bottom: 5px; margin-top: 5px;" href="/seatingorderdelete/<%= data[k]._id %>" role="button">Delete</a>
                     <% } else{ %>
@@ -79,7 +79,7 @@
                     <% } %>
                     </div>
 
-                    <table class="table-responsive" style="margin-bottom: 5px;">
+                    <table class="table table-sm" style="margin-bottom: 5px;">
                         <tr> 
                             <td align="center" style="font-size: small;">Session</td> 
                             <td align="center" style="font-size: small;">Dept / Year</td>
@@ -88,11 +88,11 @@
                             <td align="center" style="font-size: small;">Total</td>
                         </tr> 
                         <tr> 
-                            <td align="center" rowspan="2"><font style="font-weight: bolder; color: #e92843;"><%= data[k].session %></font></td>
+                            <td style="vertical-align : middle;text-align:center;" rowspan="2"><font style="font-size: larger; font-weight: bolder; color: #e92843;"><%= data[k].session %></font></td>
                             <td class="<%= data[k].department1 %>"><font style="color: white;"><%= data[k].department1 %> / <%= data[k].year1 %></font></td> 
                             <td  class="<%= data[k].department1 %>"style="font-size: smaller;"><font style="color: white; font-weight: bold;"><%= data[k].department1rollNumbers[0].substring(0,9) %></font> <font style="color: white;"><%= data[k].department1rollNumbers[0].substring(9) %> - <%= Number(data[k].department1rollNumbers[data[k].department1rollNumbers.length-1].substring(9)) %></font></td>
                             <td class="<%= data[k].department1 %>" align="center"><font style="color: white;"><%= data[k].department1rollNumbers.length %></font></td>
-                            <td rowspan="2" align="center"><font style="font-weight: bolder;"><%= data[k].department1rollNumbers.length+data[k].department2rollNumbers.length %></font></td>
+                            <td style="vertical-align : middle;text-align:center;" rowspan="2"><font style="font-size: larger; font-weight: bolder;"><%= data[k].department1rollNumbers.length+data[k].department2rollNumbers.length %></font></td>
                         </tr> 
                         <tr> 
                             <td class="<%= data[k].department2 %>"><font style="color: white;"><%= data[k].department2 %> / <%= data[k].year2 %></font></td> 
@@ -139,23 +139,22 @@
 
         <% if(data){ %>
 
-            <% var rollNumbers = []; var seatTypes = []; var seatNumbers = []; var count=0; for(i=0; i<data.rows; i++){ rollNumbers[i] =[];seatTypes[i] = [];seatNumbers[i] = []; for(j=0; j<data.columns; j++){ rollNumbers[i][j] =data.rollNumbers[count];seatTypes[i][j] =data.seatTypes[count];seatNumbers[i][j]=data.seatNumbers[count]; count++; } }  %>
+            <% var sr=""; var sc=""; var rollNumbers = []; var seatTypes = []; var seatNumbers = []; var count=0; for(i=0; i<data.rows; i++){ rollNumbers[i] =[];seatTypes[i] = [];seatNumbers[i] = []; for(j=0; j<data.columns; j++){ rollNumbers[i][j] =data.rollNumbers[count];seatTypes[i][j] =data.seatTypes[count];seatNumbers[i][j]=data.seatNumbers[count]; count++; } }  %>
 
             <div class="alert alert-info" style="float: left;">
 
                 <table class="unclick table table-bordered table-hover table-responsive">
-                    <th> Session</th>
-                    <th>Block:</th>
-                    <th>Seat No.</th>
+                    <th style="vertical-align : middle; text-align:center;"> Session</th>
+                    <th style="vertical-align : middle; text-align:center;">Block</th>
+                    <th style="vertical-align : middle; text-align:center;">Seat No.<font style="font-size:small;">[Row , Column]</font></th>
                     <tr>
-                        <td align="center"><font style="font-weight: bolder;"><%= data.session %></font></td>
-                        <td align="center"><font style="font-weight: bolder;"><%= data.block %></font></td>
-                        <td align="center"><font style="font-weight: bolder;"><%= data.seatNumbers[data.rollNumbers.indexOf(data.thisrollNumber)] %></font></td>
+                        <td style="vertical-align : middle; text-align:center;" ><font style="font-weight: bolder;"><%= data.session %></font></td>
+                        <td style="vertical-align : middle; text-align:center;" ><font style="font-weight: bolder;"><%= data.block %></font></td>
+                        <td style="vertical-align : middle; text-align:center;" ><font style="font-weight: bolder;"><%= data.seatNumbers[data.rollNumbers.indexOf(data.thisrollNumber)]%>&#010;<span style="display: block; margin-top: 5px;" id="inhere"></span></font></td>
                     </tr>
                 </table>
     
                 <table class="unclick table table-bordered">
-    
                     <% for(i=0; i<data.rows; i++){ %>
     
                         <tr>
@@ -165,7 +164,7 @@
                                 <% if(rollNumbers[i][j] === 'XX' ){ %>
                                     <td style="background-color: grey;">[<%= seatNumbers[i][j] %>]</td>
                                 <% }else{ %>
-                                    <% if(rollNumbers[i][j] === data.thisrollNumber){ %>
+                                    <% if(rollNumbers[i][j] === data.thisrollNumber){ sr=i+1;sc=j+1; %>
                                         <td id="transitcolor" style="color: white; font-weight: bolder;" class="<%= seatTypes[i][j] %>"><%= Number(rollNumbers[i][j].substring(9)) %><%=" ["+seatNumbers[i][j]+"]" %></td>
                                     <% } else{%>
                                         <td style="color: white; font-weight: bolder;" class="<%= seatTypes[i][j] %>">[<%= seatNumbers[i][j] %>]</td>
@@ -175,9 +174,11 @@
                             <% } %>
     
                         </tr>
-    
+                        
                     <% } %>
-    
+                    <script>
+                            document.getElementById('inhere').innerHTML = "["+"<%=sr%>"+" , "+"<%=sc%>"+"]";
+                    </script>
                 </table>
             </div>
 
