--- a/views/seatingorder.ejs
+++ b/views/seatingorder.ejs
@@ -146,11 +146,11 @@
                 <table class="unclick table">
                     <th style="vertical-align : middle; text-align:center;"> Session</th>
                     <th style="vertical-align : middle; text-align:center;">Block</th>
-                    <th style="vertical-align : middle; text-align:center;">Seat No.<font style="font-size:small;">[Row , Column]</font></th>
+                    <th style="vertical-align : middle; text-align:center;">[Seat No.]<font style="font-size:small;"> (Row , Column)</font></th>
                     <tr>
                         <td style="vertical-align : middle; text-align:center;" ><font style="font-weight: bolder;"><%= data.session %></font></td>
                         <td style="vertical-align : middle; text-align:center;" ><font style="font-weight: bolder;"><%= data.block %></font></td>
-                        <td style="vertical-align : middle; text-align:center;" ><font style="font-weight: bolder;"><%= data.seatNumbers[data.rollNumbers.indexOf(data.thisrollNumber)]%>&#010;<span style="display: block; margin-top: 5px;" id="inhere"></span></font></td>
+                        <td style="vertical-align : middle; text-align:center;" ><font style="font-weight: bolder;">[<%= data.seatNumbers[data.rollNumbers.indexOf(data.thisrollNumber)]%>]&#010;<span style="display: block; margin-top: 5px;" id="inhere"></span></font></td>
                     </tr>
                 </table>
     
@@ -177,7 +177,7 @@
                         
                     <% } %>
                     <script>
-                            document.getElementById('inhere').innerHTML = "["+"<%=sr%>"+" , "+"<%=sc%>"+"]";
+                            document.getElementById('inhere').innerHTML = "("+"<%=sr%>"+" , "+"<%=sc%>"+")";
                     </script>
                 </table>
             </div>
