--- a/views/event.ejs
+++ b/views/event.ejs
@@ -17,7 +17,9 @@
       <div class="text-right">
         <a href="/eventspace" style="margin-top: 10px; font-size: large; color: white;" class="btn btn-primary">Post
           New Event</a>
+          <% if(data.length != 0) {%>
           <a href="/eventverify" style="margin-top: 10px; font-size: large; color: white;" class="btn btn-primary">Verify Event IDs</a>
+          <% } %>
       </div>
     </div>
     <% } %>
@@ -28,7 +30,7 @@
     <% if(data.length === 0){ %>
     <div class="container">
 
-      <div class="alert alert-info" style="margin-top: 30px;">
+      <div class="alert alert-info" style="margin-top: 10px;">
         <h5>No Events posted </h5>
       </div>
     </div>
