--- a/views/seatingorder.ejs
+++ b/views/seatingorder.ejs
@@ -6,6 +6,15 @@
 
 <style>
 
+    <% if(data.length > 1 && type === 'teacher'){ %>
+         
+    #myModal {
+        top:9%;
+        right:50%;
+        outline: none;
+    }
+    <% } %>
+
     table, th, tr,td{
         border: 2px solid #dde2e6;
         width: 90px;
@@ -54,8 +63,31 @@
         <div class="text-right">
             <a href="/seatingorderspace" style="margin-bottom: 10px; font-size: large; color: white;" class="btn btn-primary">Create Seating Space</a>
         </div>
-        <% if(data.length > 1){%>
-            <div><a class="btn btn-danger" style="margin-bottom: 10px; margin-top: 5px;" href="/seatingorderdelete/seatingOrderDeleteAll"role="button">Delete all</a></div>
+        <% if(data.length > 1){ %>
+            <div>
+
+                <a class="btn btn-danger" style="margin-bottom: 10px; margin-top: 5px;" href="" role="button" data-toggle="modal" data-target="#myModal" >Delete all</a>
+
+                <div class="modal fade" id="myModal" role="dialog">
+                    <div class="modal-dialog">
+                    
+                    <div class="modal-content" >
+                        <div class="modal-header">
+                        <h6 style="font-weight: bolder;" class="modal-title">Delete all Seating Spaces confirmation</h6>
+                        </div>
+                        <div class="modal-body">
+                        <p style="color: black;">Are you sure?</p>
+                        <div class="text-right">
+                            <a class="btn btn-danger" href="/seatingOrderDeleteAll">Yes</a>
+                            <button type="button" class="btn btn-primary btn_no_confirm" data-dismiss="modal" aria-label="Close">No</button>
+                        </div>
+                        </div>
+                    </div>
+                    
+                    </div>
+                </div>
+
+            </div>
         <% } %>
     <% } %>
 
@@ -65,8 +97,6 @@
         <% if(data.length != 0){ %>
 
             <% for(var k = data.length-1; k >= 0; k--){ %>
-
-                <% var rollNumbers = []; var seatTypes = []; var seatNumbers = []; var count=0; for(i=0; i<data[k].rows; i++){ rollNumbers[i] =[];seatTypes[i] = [];seatNumbers[i] = []; for(j=0; j<data[k].columns; j++){ rollNumbers[i][j] =data[k].rollNumbers[count];seatTypes[i][j] =data[k].seatTypes[count];seatNumbers[i][j]=data[k].seatNumbers[count]; count++; } }  %>
 
                 <div class="alert alert-info" style="float: left; margin-right: 30px;" title="Block: <%= data[k].block %>&#010;Session: <%= data[k].session %>">
     
@@ -103,19 +133,19 @@
 
                     <table class="table table-bordered">
 
-                        <% for(i=0; i<data[k].rows; i++){ %>
+                        <% var c=0; for(i=0; i<data[k].rows; i++){ %>
 
                             <tr>
 
                                 <% for(j=0; j<data[k].columns; j++) { %>
 
-                                    <% if(rollNumbers[i][j] === 'XX' ){ %>
-                                        <td style="background-color: grey;">NIL [<%= seatNumbers[i][j] %>]</td>
+                                    <% if(data[k].rollNumbers[c] === 'XX' ){ %>
+                                        <td style="background-color: grey;">NIL [<%= data[k].seatNumbers[c] %>]</td>
                                     <% }else{ %>
-                                        <td style="color: white; font-weight: bolder;" class="<%= seatTypes[i][j] %>"><%= Number(rollNumbers[i][j].substring(9)) %><%=" ["+seatNumbers[i][j]+"]" %></td>
+                                        <td style="color: white; font-weight: bolder;" class="<%= data[k].seatTypes[c] %>"><%= Number(data[k].rollNumbers[c].substring(9)) %><%=" ["+data[k].seatNumbers[c]+"]" %></td>
                                     <% } %>
 
-                                <% } %>
+                                <% c++; } %>
 
                             </tr>
 
@@ -139,8 +169,6 @@
 
         <% if(data){ %>
 
-            <% var sr=""; var sc=""; var rollNumbers = []; var seatTypes = []; var seatNumbers = []; var count=0; for(i=0; i<data.rows; i++){ rollNumbers[i] =[];seatTypes[i] = [];seatNumbers[i] = []; for(j=0; j<data.columns; j++){ rollNumbers[i][j] =data.rollNumbers[count];seatTypes[i][j] =data.seatTypes[count];seatNumbers[i][j]=data.seatNumbers[count]; count++; } }  %>
-
             <div class="alert alert-info">
 
                 <table class="unclick table">
@@ -155,27 +183,21 @@
                 </table>
     
                 <table class="unclick table table-bordered">
-                    <% for(i=0; i<data.rows; i++){ %>
-    
+
+                    <% c=0; for(i = 0; i < data.rows; i++){ %>
                         <tr>
-    
-                            <% for(j=0; j<data.columns; j++) { %>
-    
-                                <% if(rollNumbers[i][j] === 'XX' ){ %>
-                                    <td style="background-color: grey;">[<%= seatNumbers[i][j] %>]</td>
-                                <% }else{ %>
-                                    <% if(rollNumbers[i][j] === data.thisrollNumber){ sr=i+1;sc=j+1; %>
-                                        <td id="transitcolor" style="color: white; font-weight: bolder;" class="<%= seatTypes[i][j] %>"><%= Number(rollNumbers[i][j].substring(9)) %><%=" ["+seatNumbers[i][j]+"]" %></td>
-                                    <% } else{%>
-                                        <td style="color: white; font-weight: bolder;" class="<%= seatTypes[i][j] %>">[<%= seatNumbers[i][j] %>]</td>
-                                    <% } %>
-                                <% } %>
-    
-                            <% } %>
-    
+                        <% for(j = 0; j < data.columns; j++){ %>
+
+                        <% if(data.rollNumbers[c] === data.thisrollNumber){ sr=i+1;sc=j+1; %>
+                            <td id="transitcolor" style="color: white; font-weight: bolder;" class="<%= data.seatTypes[c] %>"><%= Number(data.rollNumbers[c].substring(9)) %><%=" ["+data.seatNumbers[c]+"]" %></td>
+                        <% } else{%>
+                            <td style="color: white; font-weight: bolder;" class="<%= data.seatTypes[c] %>">[<%= data.seatNumbers[c] %>]</td>
+                        <% } %>
+
+                        <% c++; } %>
                         </tr>
-                        
                     <% } %>
+
                     <script>
                             document.getElementById('inhere').innerHTML = "("+"<%=sr%>"+" , "+"<%=sc%>"+")";
                     </script>
